[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game/player/PlayerMaster.gd" type="Script" id=1]
[ext_resource path="res://assets/img/Tiles1.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Color2.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Color1.png" type="Texture" id=4]
[ext_resource path="res://assets/menu.tres" type="DynamicFont" id=5]
[ext_resource path="res://OpenSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 30.9127, -31.0569, 25.6239, 0.124973, 30.6923, 30.6457, -0.0488052, 25.5773, -31.1204, 30.9762, -25.7215, -0.0953941, -31.1204, -31.0569, -0.0488052, -25.9884 )
one_way_collision_margin = 0.0

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 1

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="Color" type="Control" parent="Camera/CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Color2" type="Sprite" parent="Camera/CanvasLayer/Color"]
position = Vector2( 1312, 96.6084 )
scale = Vector2( 14, 5.99747 )
texture = ExtResource( 3 )

[node name="Color1" type="Sprite" parent="Camera/CanvasLayer/Color"]
position = Vector2( 1312, 96.5679 )
scale = Vector2( 12, 4 )
texture = ExtResource( 4 )

[node name="Color3" type="Sprite" parent="Camera/CanvasLayer/Color"]
position = Vector2( 1328, 816 )
scale = Vector2( 17, 9 )
texture = ExtResource( 3 )

[node name="Color4" type="Sprite" parent="Camera/CanvasLayer/Color"]
position = Vector2( 1327.62, 816 )
scale = Vector2( 14.9765, 7 )
texture = ExtResource( 4 )

[node name="Dir" type="Sprite" parent="Camera/CanvasLayer"]
position = Vector2( 1440, 800 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 11

[node name="X" type="Label" parent="Camera/CanvasLayer/Dir"]
margin_left = -186.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -6.0
text = "X : 0"
align = 1
valign = 1

[node name="Y" type="Label" parent="Camera/CanvasLayer/Dir"]
margin_left = -186.0
margin_top = -6.0
margin_right = -32.0
margin_bottom = 19.0
text = "Y : 0"
align = 1
valign = 1

[node name="Score" type="Label" parent="Camera/CanvasLayer"]
margin_left = 1120.0
margin_top = 32.5679
margin_right = 1504.0
margin_bottom = 160.568
custom_fonts/font = ExtResource( 5 )
text = "Score : 0"
align = 1
valign = 1

[node name="Tuto" type="Node2D" parent="Camera/CanvasLayer"]
visible = false
position = Vector2( -910.752, -569.351 )
scale = Vector2( 2, 2 )

[node name="ColorRect2" type="ColorRect" parent="Camera/CanvasLayer/Tuto"]
margin_left = 455.0
margin_top = 285.0
margin_right = 1239.0
margin_bottom = 749.0
color = Color( 0.415686, 0.407843, 0.407843, 1 )

[node name="ColorRect" type="ColorRect" parent="Camera/CanvasLayer/Tuto"]
margin_left = 471.0
margin_top = 301.0
margin_right = 1207.0
margin_bottom = 717.0
color = Color( 0.694118, 0.678431, 0.678431, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Camera/CanvasLayer/Tuto"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 748.0
margin_top = 430.0
margin_right = 917.0
margin_bottom = 562.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/Tuto/CenterContainer"]
margin_right = 169.0
margin_bottom = 132.0
alignment = 1

[node name="Color2" type="Sprite" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer"]
position = Vector2( 83, 76 )
scale = Vector2( 6, 4.2 )
texture = ExtResource( 3 )

[node name="Color1" type="Sprite" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer"]
position = Vector2( 83, 76 )
scale = Vector2( 5.7, 4 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Tuto ?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 169.0
margin_bottom = 132.0
alignment = 1

[node name="NoButton" type="Button" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 87.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Non"

[node name="YesButton" type="Button" parent="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 149.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Oui"

[node name="Timer" type="Timer" parent="."]

[node name="Jump" type="Label" parent="."]
margin_left = 32.0
margin_top = -32.0
margin_right = 160.0
custom_fonts/font = SubResource( 3 )
text = "Jump : Possible"
align = 1
valign = 1

[node name="Win" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_right = 224.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 4 )
text = "Tu a Gagner"
align = 1
valign = 1

[connection signal="button_down" from="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_button_down"]
[connection signal="button_down" from="Camera/CanvasLayer/Tuto/CenterContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
